public class AnimationStrings
{
    public static string isRunning = "isRunning";
    public static string isMoving = "isMoving";
    public static string isGrounded = "isGrounded";
    public static string isOnCelling = "isOnCelling";
    public static string isOnWall = "isOnWall";
    public static string yVelocity = "yVelocity";
    public static string jumpTrigger = "jumping";
    public static string attackTrigger = "attack";
    public static string canMove = "canMove";
    public static string isDying = "isDying";
    public static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    public static string AttackCooldown = "attackCooldown";
}